--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-<<<<<<< HEAD
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-=======
     <link rel="icon" href="https://www.stefantopalovic.com/porticon.png" />
->>>>>>> 1613ec2 (ready stage)
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,26 +10,13 @@
       content="Aydamir Zhilyasov | Front-end Developer"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-<<<<<<< HEAD
-    <title>Aydamir Zhilyasov | Front-end Developer</title>
-<<<<<<< HEAD
+    <!-- <title>Aydamir Zhilyasov | Front-end Developer</title> -->
     <link href="../src/Bootstrap/bootstrap.min.css" rel="stylesheet">
-=======
->>>>>>> 1613ec2 (ready stage)
-=======
     <title>Zhilyasov</title>
->>>>>>> 99b96f6 (g)
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
-
     <div id="root"></div>
-
-
-<<<<<<< HEAD
     <script src="../src/Bootstrap/bootstrap.bundle.min.js"></script> </script>
-=======
->>>>>>> 1613ec2 (ready stage)
   </body>
 </html>
