--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- <title>Aydamir Zhilyasov | Front-end Developer</title> -->
-    <link href="../src/Bootstrap/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../src/Bootstrap/bootstrap.min.css" rel="stylesheet"> -->
     <title>Zhilyasov</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="../src/Bootstrap/bootstrap.bundle.min.js"></script> </script>
+    <!-- <script src="../src/Bootstrap/bootstrap.bundle.min.js"></script> </script> -->
   </body>
 </html>
