--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://www.stefantopalovic.com/porticon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/porticon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +10,7 @@
       content="Aydamir Zhilyasov | Front-end Developer"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Zhilyasov</title>
+    <title>Aydamir Zhilyasov | Front-end Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
