--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/porticon.png" />
@@ -7,12 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Aydamir Zhilyasov | Front-end Developer"
+      content="Aydamir Zhilyasov | Developer"
     />
+    <meta name="google" content="notranslate">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Aydamir Zhilyasov | Front-end Developer</title>
+    <title>Zhilyasov</title>
   </head>
-  <body>
+  <body class="notranslate">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
